app/1deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-node-app  
  namespace: hello 
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello-node-app
  template:
    metadata:
      labels:
        app: hello-node-app
    spec:
      resource: 
      containers:
        - name: hello-node-app
          # image: registry.k8s.io/e2e-test-images/agnhost
          image: nginxdemos/hello 
          ports:
          - containerPort: 8080
            protocol: TCP
