app/2service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-node-svc
  namespace: hello
spec:
  selector:
    app: hello-node-app
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
