app/3ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-node-ingress
  namespace: hello
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: hello.localdev.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hello-node-svc
                port:
                  number: 80
